--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Style Tiles with CSS - A20</title>
+  <title>Style tile for ON THE RUN</title>
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -13,10 +13,9 @@
 <body>
   <div class="full-width header-wrapper">
     <header>
-      <h1>Style Tile Template</h1>
-      <h2>Project name</h2>
-      <h3>Style tile</h3>
-      <h4>Version 1</h4>
+      <h1>ON THE RUN</h1>
+      <h2>Style tile</h2>
+       <h3>Version 1</h3>
     </header>
   </div>
 
@@ -29,7 +28,12 @@
           <li class="color-swatch-2"></li>
           <li class="color-swatch-3"></li>
           <li class="color-swatch-4"></li>
+        </ul>
+        <ul class="swatchgrid">
           <li class="color-swatch-5"></li>
+            <li class="color-swatch-6"></li>
+            <li class="color-swatch-7"></li>
+            <li class="color-swatch-8"></li>
         </ul>
       </section>
       <section class="textures">
@@ -37,7 +41,6 @@
         <ul class="swatchgrid">
           <li class="texture-swatch-1"></li>
           <li class="texture-swatch-2"></li>
-          <li class="texture-swatch-3"></li>
         </ul>
       </section>
       <section class="buttons">
@@ -53,15 +56,15 @@
     <div class="column">
       <section class="typography-main">
         <h3 class="section-heading">Typography</h3>
-        <h1 class="h1-sample">A sample header</h1>
+        <h1 class="h1-sample">This is an example of a header</h1>
         <p class="font-details-h1">
-          <span class="font-name">Font Name</span>,
-          <span class="font-color">#color value</span>
+          <span class="font-name">Font: Raleway</span>,
+          <span class="font-color">#151515</span>
         </p>
-        <h2 class="h2-sample">An example of a sub header</h2>
+        <h2 class="h2-sample">This is an example of a sub header</h2>
         <p class="font-details-h2">
-          <span class="font-name">Font Name</span>,
-          <span class="font-color">#color value</span>
+          <span class="font-name">Font: Menlo</span>,
+          <span class="font-color">#151515</span>
         </p>
         <p class="typography-sample">
           This sample paragraph has <strong>strong parts</strong> and
@@ -72,22 +75,24 @@
           netus et malesuada fames ac turpis egestas.
         </p>
         <p class="font-details-p">
-          <span class="font-name">Font Name</span>,
-          <span class="font-color">#color value</span>
+          <span class="font-name">Font: Menlo</span>,
+          <span class="font-color">#151515</span>
         </p>
-        <a href="#" class="typography-sample">This is an example of a text link.</a>
+        <a href="#" class="typography-sample">This is an example of a text link >></a>
         <p class="font-details-a">
-          <span class="font-name">Font Name</span>,
-          <span class="font-color">#color value</span>
+          <span class="font-name">Font: Menlo</span>,
+          <span class="font-color">#0737A8</span>
         </p>
       </section>
       <section class="adjectives">
         <h3 class="section-heading">Adjectives</h3>
         <ul>
-          <li>Write</li>
-          <li>Your</li>
-          <li>adjectives</li>
-          <li>here</li>
+          <li>Eksklusiv</li>
+          <li>Legende</li>
+          <li>Ungdommelig</li>
+          <li>Simpel</li>
+           <li>Let</li>
+           <li>Hip</li>
         </ul>
       </section>
     </div>
@@ -96,7 +101,7 @@
 
   <div class="full-width">
     <footer>
-      <p>Be creative - don't just use this template as is!</p>
+      <p>Style tile for ON THE RUN</p>
     </footer>
   </div>
 </body>
